--- a/examples/basic/package.json
+++ b/examples/basic/package.json
@@ -4,14 +4,15 @@
   "dependencies": {
     "@babel/runtime": "^7.1.2",
     "babel": "^6.23.0",
-    "react": "16.8.3",
-    "react-native": "0.59.1"
+    "eslint": "^6.1.0",
+    "react": "16.8.6",
+    "react-native": "0.60.4"
   },
   "devDependencies": {
-    "babel-jest": "23.6.0",
-    "jest": "23.6.0",
-    "metro-react-native-babel-preset": "0.53.1",
-    "react-test-renderer": "16.8.3"
+    "babel-jest": "24.8.0",
+    "jest": "24.8.0",
+    "metro-react-native-babel-preset": "0.55.0",
+    "react-test-renderer": "16.8.6"
   },
   "jest": {
     "preset": "react-native"
